fix button on mobile

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -385,7 +385,7 @@ a[href$='#subscribe'] {
   padding: 1rem;
   display: block;
   text-align: center;
-  margin: 1rem 10rem;
+  margin: 1rem 4vw;
   border-radius: 0.5rem;
   border: 4px solid #ff8200;
   transition: transform 0.2s ease-in-out;
